[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButton_with_Font.tres" type="Theme" id=1]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24_Label.tres" type="Theme" id=2]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=3]
[ext_resource path="res://assets/Fonts_v2/Noto_Sans_SC/NotoSansSC-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PanelBorders.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Buttons/button_craftchoose.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=11]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/CheckBox.tres" type="Theme" id=12]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DecorButton.tres" type="Theme" id=13]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=14]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Ledger_30.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Buttons/button_craftchoose_hover.png" type="Texture" id=16]
[ext_resource path="res://src/scenes/SaveLoadPanel.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/scenes/Options.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Panels/panel_modsoptions.png" type="Texture" id=19]
[ext_resource path="res://src/scenes/ModPanel.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/scenes/WarnScreen.tscn" type="PackedScene" id=21]
[ext_resource path="res://gui_modules/Universal/Modules/Gallery.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/Themes_v2/MAIN_MENU/Menu_NewGameOptions.tres" type="Theme" id=23]
[ext_resource path="res://assets/fonts/BLKCHCRY.TTF" type="DynamicFontData" id=24]
[ext_resource path="res://gui_modules/Universal/Scripts/Menu.gd" type="Script" id=25]
[ext_resource path="res://assets/fonts/CursiveFont.tres" type="DynamicFont" id=26]
[ext_resource path="res://assets/images/backgroundmenu/mountain1.jpg" type="Texture" id=27]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=28]
[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://assets/images/buttons/mainmenu/button_itch2.png" type="Texture" id=30]
[ext_resource path="res://assets/images/buttons/mainmenu/button_subscribestar.png" type="Texture" id=31]
[ext_resource path="res://assets/images/buttons/mainmenu/button_subscribestar2.png" type="Texture" id=32]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NS_24.tres" type="DynamicFont" id=33]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DropDown.tres" type="Theme" id=34]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/triangles_selection_hover1.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/triangles_selection_hover2.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/triangles_selection_right.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/triangles_selection_active2.png" type="Texture" id=38]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/triangles_selection_active1.png" type="Texture" id=39]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/triangles_selection_left.png" type="Texture" id=40]
[ext_resource path="res://assets/images/buttons/mainmenu/button_discord2.png" type="Texture" id=41]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/new/button_choose_basic.png" type="Texture" id=42]
[ext_resource path="res://assets/images/buttons/mainmenu/button_discord.png" type="Texture" id=46]
[ext_resource path="res://assets/Themes_v2/MAIN_MENU/Menu_StartGame_panel.tres" type="StyleBox" id=54]
[ext_resource path="res://assets/images/buttons/mainmenu/button_patreon.png" type="Texture" id=55]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24.tres" type="DynamicFont" id=56]
[ext_resource path="res://assets/images/buttons/mainmenu/button_patreon2.png" type="Texture" id=58]
[ext_resource path="res://assets/images/buttons/mainmenu/button_fandom2.png" type="Texture" id=59]
[ext_resource path="res://assets/images/buttons/mainmenu/button_itch.png" type="Texture" id=60]
[ext_resource path="res://assets/images/buttons/mainmenu/button_fandom.png" type="Texture" id=61]

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 3
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 29 )

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="DynamicFont" id=6]
size = 128
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_bottom = -10
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=7]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 210, 58 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 210, 58 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 210, 58 )

[node name="Menu" type="Control"]
script = ExtResource( 25 )

[node name="background" type="TextureRect" parent="."]
margin_right = 2160.0
margin_bottom = 1080.0
texture = ExtResource( 27 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = 1.0
margin_right = 2157.0
margin_bottom = 1081.0
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = 1.0
margin_right = 2157.0
margin_bottom = 1081.0
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = 1.0
margin_right = 2157.0
margin_bottom = 1081.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char_sprite" type="TextureRect" parent="."]
visible = false
margin_left = 1008.17
margin_top = -0.513306
margin_right = 1921.17
margin_bottom = 1079.49
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 804.0
margin_top = 229.0
margin_right = 1149.0
margin_bottom = 1005.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuebutton" type="Button" parent="VBoxContainer"]
margin_left = 6.0
margin_right = 645.0
margin_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUCONTINUE"

[node name="newgamebutton" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 652.0
margin_bottom = 188.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUNEWGAME"
__meta__ = {
"_editor_description_": ""
}

[node name="loadbutton" type="Button" parent="VBoxContainer"]
margin_left = 102.0
margin_top = 196.0
margin_right = 550.0
margin_bottom = 286.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENULOAD"
__meta__ = {
"_editor_description_": ""
}

[node name="optionsbutton" type="Button" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 294.0
margin_right = 608.0
margin_bottom = 384.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUOPTIONS"
__meta__ = {
"_editor_description_": ""
}

[node name="creditsbutton" type="Button" parent="VBoxContainer"]
margin_left = 48.0
margin_top = 392.0
margin_right = 603.0
margin_bottom = 482.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUCREDITS"
__meta__ = {
"_editor_description_": ""
}

[node name="modsbutton" type="Button" parent="VBoxContainer"]
margin_left = 98.0
margin_top = 490.0
margin_right = 554.0
margin_bottom = 580.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUMODS"
__meta__ = {
"_editor_description_": ""
}

[node name="gallery" type="Button" parent="VBoxContainer"]
margin_left = 33.0
margin_top = 588.0
margin_right = 619.0
margin_bottom = 678.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUGALLERY"
__meta__ = {
"_editor_description_": ""
}

[node name="quitbutton" type="Button" parent="VBoxContainer"]
margin_left = 115.0
margin_top = 686.0
margin_right = 537.0
margin_bottom = 776.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.913725, 0.894118, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.74902, 0.545098, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
toggle_mode = true
text = "MENUQUIT"
__meta__ = {
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 97.0
margin_top = 603.0
margin_right = 436.0
margin_bottom = 696.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = -116.0
margin_top = 73.0
margin_right = 76.0
margin_bottom = 692.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 10

[node name="Subscribestar" type="TextureButton" parent="Panel/VBoxContainer"]
margin_right = 192.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 31 )
texture_hover = ExtResource( 32 )
texture_focused = ExtResource( 32 )
expand = true
stretch_mode = 5

[node name="Patreon" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 160.0
margin_right = 192.0
margin_bottom = 310.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 55 )
texture_hover = ExtResource( 58 )
texture_focused = ExtResource( 58 )
expand = true
stretch_mode = 5

[node name="Discord" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 320.0
margin_right = 192.0
margin_bottom = 470.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 46 )
texture_hover = ExtResource( 41 )
texture_focused = ExtResource( 41 )
expand = true
stretch_mode = 5

[node name="Itch" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 480.0
margin_right = 192.0
margin_bottom = 630.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 60 )
texture_hover = ExtResource( 30 )
texture_focused = ExtResource( 30 )
expand = true
stretch_mode = 5

[node name="Wiki" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 640.0
margin_right = 192.0
margin_bottom = 790.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 61 )
texture_hover = ExtResource( 59 )
texture_focused = ExtResource( 59 )
expand = true
stretch_mode = 5

[node name="MainLabel" type="Label" parent="."]
margin_left = 563.0
margin_top = 59.0
margin_right = 1413.0
margin_bottom = 210.0
custom_colors/font_color = Color( 0.980392, 0.960784, 0.772549, 1 )
custom_fonts/font = SubResource( 6 )
text = "Strive: Conquest"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 18 )]
visible = false
margin_left = 635.0
margin_right = 1384.0
margin_bottom = 920.0

[node name="saveloadpanel" parent="." instance=ExtResource( 17 )]
visible = false
margin_left = 635.0
margin_top = 138.0
margin_right = 1285.0
margin_bottom = 912.0

[node name="version" type="Label" parent="."]
margin_left = 12.0
margin_top = 1037.0
margin_right = 115.0
margin_bottom = 1072.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.909804, 0.898039, 0.756863, 1 )
custom_fonts/font = ExtResource( 26 )
text = "ver. 0.1.0"
__meta__ = {
"_editor_description_": ""
}

[node name="DemoPanel" type="Panel" parent="."]
visible = false
margin_left = 716.0
margin_top = 347.0
margin_right = 1336.0
margin_bottom = 712.0

[node name="RichTextLabel" type="RichTextLabel" parent="DemoPanel"]
margin_left = 47.0
margin_top = 47.0
margin_right = 574.0
margin_bottom = 215.0
bbcode_enabled = true
bbcode_text = "This is an early demo version. Everything you see is a subject to change and should be treated as a representation of general idea and quality level of the future product. Thank you for trying out this game."
text = "This is an early demo version. Everything you see is a subject to change and should be treated as a representation of general idea and quality level of the future product. Thank you for trying out this game."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DemoPanel"]
visible = false
margin_left = 170.0
margin_top = 289.0
margin_right = 431.0
margin_bottom = 340.0
text = "Confirm"

[node name="WarnScreen" parent="." instance=ExtResource( 21 )]
visible = false
margin_left = 0.01477
margin_top = 0.0440397
margin_bottom = 1080.04

[node name="mod_panel" parent="." instance=ExtResource( 20 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 340.811
margin_top = 140.276
margin_right = 1601.81
margin_bottom = 943.276

[node name="NewGamePanel" type="Panel" parent="."]
visible = false
margin_left = 605.0
margin_top = 143.903
margin_right = 1315.0
margin_bottom = 917.903
custom_styles/panel = ExtResource( 54 )

[node name="NewGameLabel" type="Label" parent="NewGamePanel"]
margin_right = 709.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 15 )
text = "NEWGAMENAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="NewGamePanel"]
margin_left = 6.0
margin_top = 187.0
margin_right = 294.0
margin_bottom = 234.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
text = "NEWGAMESETTING"
align = 1
valign = 1

[node name="PresetContainer" type="ScrollContainer" parent="NewGamePanel"]
margin_left = 40.0
margin_top = 111.0
margin_right = 266.0
margin_bottom = 422.0
theme = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewGamePanel/PresetContainer"]
margin_right = 226.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="NewGamePanel/PresetContainer/VBoxContainer"]
visible = false
margin_right = 226.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
toggle_mode = true

[node name="Settings" type="VBoxContainer" parent="NewGamePanel"]
margin_left = 24.0
margin_top = 545.0
margin_right = 280.0
margin_bottom = 721.0
theme = ExtResource( 12 )

[node name="Button" type="CheckBox" parent="NewGamePanel/Settings"]
visible = false
margin_right = 256.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="NewGamePanel/Settings/Button"]
margin_left = 72.0
margin_top = 9.0
margin_right = 264.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )

[node name="ScrollContainer" type="ScrollContainer" parent="NewGamePanel"]
margin_left = 328.0
margin_top = 115.0
margin_right = 672.0
margin_bottom = 451.0
size_flags_vertical = 3
theme = ExtResource( 3 )
scroll_horizontal_enabled = false

[node name="Settings2" type="VBoxContainer" parent="NewGamePanel/ScrollContainer"]
margin_right = 344.0
size_flags_horizontal = 3
theme = ExtResource( 12 )

[node name="Button" type="CheckBox" parent="NewGamePanel/ScrollContainer/Settings2"]
visible = false
margin_right = 344.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="NewGamePanel/ScrollContainer/Settings2/Button"]
margin_left = 72.0
margin_top = 9.0
margin_right = 264.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="NewGamePanel"]
margin_left = 328.0
margin_top = 115.0
margin_right = 672.0
margin_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 33 )

[node name="Settings3" type="VBoxContainer" parent="NewGamePanel"]
margin_left = 24.0
margin_top = 251.0
margin_right = 280.0
margin_bottom = 460.0
theme = ExtResource( 12 )

[node name="label" type="Label" parent="NewGamePanel/Settings3"]
visible = false
margin_right = 256.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
text = "NEWGAMESETTING"
align = 1
valign = 1

[node name="button" type="TextureButton" parent="NewGamePanel/Settings3"]
visible = false
margin_right = 256.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 34 )
texture_normal = ExtResource( 42 )
texture_pressed = ExtResource( 42 )
texture_hover = ExtResource( 42 )
texture_disabled = ExtResource( 42 )
texture_focused = ExtResource( 42 )
expand = true

[node name="LArr" type="TextureButton" parent="NewGamePanel/Settings3/button"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -25.0
margin_right = 26.0
margin_bottom = 25.0
grow_vertical = 2
texture_normal = ExtResource( 40 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 36 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="NewGamePanel/Settings3/button"]
margin_left = 24.0
margin_top = 8.0
margin_right = 206.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 28 )
text = "sex"
align = 1

[node name="RArr" type="TextureButton" parent="NewGamePanel/Settings3/button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = -5.0
margin_bottom = 7.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 35 )

[node name="tip" type="TextureRect" parent="NewGamePanel"]
visible = false
margin_left = 751.0
margin_top = 85.0
margin_right = 814.0
margin_bottom = 141.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGamePanel"]
visible = false
margin_left = 736.036
margin_top = 42.9593
margin_right = 831.036
margin_bottom = 66.9593
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
text = "Settings"

[node name="StartButton" type="Button" parent="NewGamePanel"]
margin_left = 397.21
margin_top = 672.097
margin_right = 598.21
margin_bottom = 735.097
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = SubResource( 10 )
text = "NEWGAMESTART"

[node name="BackButton" type="Button" parent="NewGamePanel"]
margin_left = 49.0
margin_top = 106.097
margin_right = 250.0
margin_bottom = 169.097
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = SubResource( 10 )
text = "BACKTOPRESETS"

[node name="Gold" type="TextureRect" parent="NewGamePanel"]
margin_left = 407.71
margin_top = 608.097
margin_right = 463.71
margin_bottom = 664.097
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="NewGamePanel/Gold"]
margin_left = 51.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="Materials" type="HBoxContainer" parent="NewGamePanel"]
margin_left = 310.0
margin_top = 528.0
margin_right = 698.0
margin_bottom = 608.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="NewGamePanel/Materials"]
visible = false
margin_left = 154.0
margin_right = 234.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="NewGamePanel/Materials/Button"]
margin_left = 2.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 77.0
rect_min_size = Vector2( 74, 74 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGamePanel/Materials/Button"]
margin_left = 2.0
margin_top = 43.0
margin_right = 77.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangelogButton" type="Button" parent="."]
margin_left = 6.0
margin_top = 990.0
margin_right = 153.0
margin_bottom = 1038.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.92549, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0.655824, 0.660156, 0.521523, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MENUCHANGELOG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Changelogpanel" type="Panel" parent="."]
visible = false
margin_left = 529.445
margin_top = 97.5106
margin_right = 1458.44
margin_bottom = 810.511
custom_styles/panel = ExtResource( 6 )

[node name="changelogtext" type="RichTextLabel" parent="Changelogpanel"]
margin_left = 19.0441
margin_top = 49.6543
margin_right = 918.044
margin_bottom = 687.654
theme = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 33 )
bbcode_enabled = true

[node name="Credits" type="Control" parent="."]
visible = false
margin_left = 635.0
margin_top = 153.0
margin_right = 1285.0
margin_bottom = 927.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Credits"]
margin_right = 650.0
margin_bottom = 774.0
texture = ExtResource( 19 )

[node name="Label" type="Label" parent="Credits/Background"]
margin_right = 649.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 15 )
text = "MENUCREDITSNAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/Background"]
visible = false
margin_left = 29.0
margin_top = 110.0
margin_right = 616.0
margin_bottom = 735.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/Background/ScrollContainer"]
margin_right = 587.0
margin_bottom = 35.0

[node name="Button" type="Label" parent="Credits/Background/ScrollContainer/VBoxContainer"]
margin_right = 587.0
margin_bottom = 32.0
rect_min_size = Vector2( 587, 0 )
custom_fonts/font = SubResource( 7 )
text = "Credits"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/Background"]
margin_left = 32.0
margin_top = 151.0
margin_right = 612.0
margin_bottom = 752.0
custom_fonts/normal_font = ExtResource( 56 )
bbcode_text = "Game design, writing, programming: Maverik

Combat and skil programming: ykoc

GUI programming: Gerakena
Helper Programming: SphinxKingStone
Extended modding core/support: zeltop

Character design: Nightigall
Character design: @naisk47
Scene art: Allanheil
Background art: Laynesis, OMA(Olga Morozova)
Icon art: Persich

Writing: ralphomayo
Writing: plumpjack
Writing: S[Mutt]

Proofreading: Dorant, ralphomayo, Khuja, Erra Null, LynerBLUE

Also thanks to: negtize724

Ambient battle noise: swords and shouting - pfranzen
https://freesound.org/people/pfranzen/sounds/192072/"
text = "Game design, writing, programming: Maverik

Combat and skil programming: ykoc

GUI programming: Gerakena
Helper Programming: SphinxKingStone
Extended modding core/support: zeltop

Character design: Nightigall
Character design: @naisk47
Scene art: Allanheil
Background art: Laynesis, OMA(Olga Morozova)
Icon art: Persich

Writing: ralphomayo
Writing: plumpjack
Writing: S[Mutt]

Proofreading: Dorant, ralphomayo, Khuja, Erra Null, LynerBLUE

Also thanks to: negtize724

Ambient battle noise: swords and shouting - pfranzen
https://freesound.org/people/pfranzen/sounds/192072/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gallery" parent="." instance=ExtResource( 22 )]
visible = false
